--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,11 +4,9 @@ on:
   push:
     branches:
       - main
-      - v1-stable
   pull_request:
     branches:
       - main
-      - v1-stable
   workflow_dispatch:
 
 # permissions:
@@ -27,8 +25,8 @@ jobs:
   rspec:
     name: Ruby ${{matrix.ruby-version}} (${{ matrix.gemfile }})
     runs-on: ubuntu-latest
-#    needs:
-#      - generate-seed
+#      needs:
+#        - generate-seed
     strategy:
       fail-fast: false
       matrix:
@@ -39,8 +37,8 @@ jobs:
           - rails_6.1
           - rails_7.0
           - rails_7.1
+          - rails_7.2
         ruby-version:
-          - "3.0"
           - "3.1"
           - "3.2"
           - "3.3"
