--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,20 +13,9 @@ on:
 #   contents: read
 
 jobs:
-#  generate-seed:
-#    name: Generate random seed
-#    runs-on: ubuntu-latest
-#    outputs:
-#      seed: ${{ steps.seed_generator.outputs.seed }}
-#    steps:
-#      - id: seed_generator
-#        run: echo "::set-output name=seed::$(shuf -i 0-99999 -n 1)"
-
   rspec:
     name: Ruby ${{matrix.ruby-version}} (${{ matrix.gemfile }})
     runs-on: ubuntu-latest
-#      needs:
-#        - generate-seed
     strategy:
       fail-fast: false
       matrix:
@@ -43,6 +32,7 @@ jobs:
           - "3.1"
           - "3.2"
           - "3.3"
+          - "3.4.0-preview2"
         exclude:
           - gemfile: rails_8.0
             ruby-version: "3.1"
@@ -61,4 +51,4 @@ jobs:
       - name: RSpec
         env:
           BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
-        run: bundle exec rspec # --seed ${{ needs.generate-seed.outputs.seed }}
+        run: bundle exec rspec
